--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -146,7 +146,7 @@
                     For more information about the flag service,
                     to speak with someone about your flag service,
                     or for more information on joining our troop,
-                    please <a href="mailto:troop581az@gmail.com">SEND US AN EMAIL</a>.
+                    please <a href="mailto:troop581az@gmail.com">send us an email</a>.
                 </h5>
             </div>
         </div>
