--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -6,7 +6,7 @@
                     <div class="col-sm-12">
                         <h2 class="close-top">Please help us get to Scout Camp!</h2>
                         <h4>
-                            <button class="btn btn-sm btn-primary" ng-click="vm.showBoundaries()"><i class="fa fa-fw fa-map-marker"></i> Flag Boundaries</button>
+                            <button class="btn btn-sm btn-primary" ng-click="vm.showBoundaries()"><i class="fa fa-fw fa-map-marker"></i> Flag Boundaries</button>&ensp;
                             Please make sure you live in the boundaries that we cover.
                         </h4>
                         <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
