--- a/app/modules/flags.boundaries.html
+++ b/app/modules/flags.boundaries.html
@@ -1,5 +1,5 @@
 ﻿<div class="modal-header">
-    <span class="h3 modal-title text-center">Troop 581 Flag Boundaries</span><button class="btn btn-primary pull-right" ng-click="vm.close()">Close</button>
+    <span class="h3 modal-title text-center">Troop 581 Flag Boundaries</span><button class="btn btn-primary pull-right hidden-xs" ng-click="vm.close()">Close</button>
 </div>
 <div class="modal-body">
     <img src="../../content/images/boundaries.png" class="img-responsive img-rounded img-center" />
