--- a/app/modules/success.html
+++ b/app/modules/success.html
@@ -1,7 +1,7 @@
 ﻿<div ng-controller="success as vm">
     <div class="container">
         <div class="jumbotron">
-            <h3>Thank you!!</h3>
+            <h3>Thank you for your flag service subscription!!</h3>
             <p>
                 Troop 581 appreciates your support!
             </p>
