--- a/app/modules/success.html
+++ b/app/modules/success.html
@@ -1,9 +1,9 @@
 ﻿<div ng-controller="success as vm">
     <div class="container">
         <div class="jumbotron">
-            <h3>Thank you for your flag service subscription!!</h3>
+            <h1>Thank you!</h1>
             <p>
-                Troop 581 appreciates your support!
+                Thank you for supporting Troop 581. We are very grateful.
             </p>
         </div>
     </div>
