--- a/app/modules/success.html
+++ b/app/modules/success.html
@@ -3,7 +3,7 @@
         <div class="jumbotron">
             <h1>Thank you!</h1>
             <p>
-                Thank you for supporting Troop 581. We are very grateful.
+                Thank you for helping Troop 581 get to Scout Camp. We very much appreciate your support!
             </p>
         </div>
     </div>
