--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -119,7 +119,7 @@
                             <input type="hidden" name="on5" value="Flags">
                             <input type="hidden" name="os5" maxlength="200" value="{{vm.data.values.subscribe ? 'Yes' : 'No'}}">
                             <input type="hidden" name="on6" value="Donation">
-                            <input type="hidden" name="os6" maxlength="200" value="{{vm.data.values.donate ? '0' : vm.data.values.donation}}">
+                            <input type="hidden" name="os6" maxlength="200" value="{{vm.data.values.donate ? vm.data.values.donation : '0'}}">
                             <button type="submit" class="btn btn-lg btn-wide btn-success img-center">Donate via PayPal</button>
                         </form>
                         <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
