--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -118,7 +118,7 @@
                             <input type="hidden" name="os4" maxlength="200" value="{{vm.data.values.instructions}}">
                             <input type="hidden" name="on5" value="Flags">
                             <input type="hidden" name="os5" maxlength="200" value="{{vm.data.values.subscribe ? 'Yes' : 'No'}}">
-                            <input type="hidden" name="on6" value="Donation">
+                            <input type="hidden" name="on6" value="Additional Donation">
                             <input type="hidden" name="os6" maxlength="200" value="{{vm.data.values.donate ? vm.data.values.donation : '0'}}">
                             <button type="submit" class="btn btn-lg btn-wide btn-success img-center">Donate via PayPal</button>
                         </form>
