--- a/app/modules/success.html
+++ b/app/modules/success.html
@@ -3,7 +3,7 @@
         <div class="jumbotron">
             <h1>Thank you!</h1>
             <p>
-                Thank you for helping Troop 581 get to Scout Camp. We appreciate your support!
+                Thank you for helping Troop&nbsp;581 get to Scout Camp. We appreciate your support!
             </p>
         </div>
     </div>
