--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -106,24 +106,14 @@
                             <input type="hidden" name="return" value="http://troop581.github.io/#/success">
                             <input type="hidden" name="cancel_return" value="http://troop581.github.io/#/flags">
                             <input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHosted">
-                            <input type="hidden" name="on0" value="Name">
-                            <input type="hidden" name="os0" maxlength="200" value="{{vm.data.values.name}}">
-                            <input type="hidden" name="on1" value="Address">
-                            <input type="hidden" name="os1" maxlength="200" value="{{vm.data.values.address}}">
-                            <input type="hidden" name="on2" value="Phone">
-                            <input type="hidden" name="os2" maxlength="200" value="{{vm.data.values.phone}}">
-                            <input type="hidden" name="on3" value="Email">
-                            <input type="hidden" name="os3" maxlength="200" value="{{vm.data.values.email}}">
-                            <input type="hidden" name="on4" value="Instructions">
-                            <input type="hidden" name="os4" maxlength="200" value="{{vm.data.values.instructions}}">
-                            <input type="hidden" name="on5" value="Flags">
-                            <input type="hidden" name="os5" maxlength="200" value="{{vm.data.values.subscribe ? 'Yes' : 'No'}}">
-                            <input type="hidden" name="on6" value="Additional Donation">
-                            <input type="hidden" name="os6" maxlength="200" value="{{vm.data.values.donate ? vm.data.values.donation : '0'}}">
+                            <input type="hidden" name="name" value="{{vm.data.values.name}}">
+                            <input type="hidden" name="address" value="{{vm.data.values.address}}">
+                            <input type="hidden" name="phone" value="{{vm.data.values.phone}}">
+                            <input type="hidden" name="email" value="{{vm.data.values.email}}">
+                            <input type="hidden" name="instructions" value="{{vm.data.values.instructions}}">
                             <button type="submit" class="btn btn-lg btn-wide btn-success img-center">Donate via PayPal</button>
                         </form>
                         <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
-                        <div>* If you pay by credit card, please consider donating a couple extra dollars to help us cover the credit card charge. Bank transfers through PayPal do not cost us anything.</div>
                     </div>
                 </div>
             </div>
