--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -100,12 +100,13 @@
                             <input type="hidden" name="item_name" value="{{vm.getDescription()}}">
                             <input type="hidden" name="amount" value="{{vm.getAmount()}}">
                             <input type="hidden" name="currency_code" value="USD">
-                            <input type="hidden" name="no_note" value="1">
+                            <input type="hidden" name="no_note" value="0">
+                            <input type="hidden" name="cn" value="Add any special instructions here:">
                             <input type="hidden" name="no_shipping" value="2">
                             <input type="hidden" name="rm" value="1">
                             <input type="hidden" name="return" value="http://troop581.github.io/#/success">
                             <input type="hidden" name="cancel_return" value="http://troop581.github.io/#/flags">
-                            <input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHosted">
+                            <!--<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHosted">-->
                             <input type="hidden" name="name" value="{{vm.data.values.name}}">
                             <input type="hidden" name="address" value="{{vm.data.values.address}}">
                             <input type="hidden" name="phone" value="{{vm.data.values.phone}}">
