--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -34,38 +34,26 @@
                                     <span class="input-group-addon">Gilbert, AZ</span>
                                 </div>
                             </div>
-                            <div class="form-group field-label">
-                                <label>Phone Number *</label>
-                                <input type="text" class="form-control input-sm" ng-model="vm.data.values.phone" ng-blur="vm.autosave()">
+                            <div class="form-group">
+                                <label class="checkbox-inline">
+                                    <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day 2015 through Presidents' Day 2016</span>
+                                    <span ng-show="!!vm.data.values.subscribe"><small><em>Thank you!!</em></small></span>
+                                </label>
                             </div>
-                            <div class="form-group field-label">
-                                <label>Email</label>
-                                <input type="text" class="form-control input-sm" ng-model="vm.data.values.email" ng-blur="vm.autosave()">
-                            </div>
-                            <div class="form-group field-label">
-                                <label>Any Special Instructions?</label>
-                                <textarea maxlength="255" class="form-control input-sm" ng-model="vm.data.values.instructions" ng-blur="vm.autosave()"></textarea>
+                            <div class="form-group">
+                                <label class="checkbox-inline">
+                                    <input ng-model="vm.data.values.donate" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like to give a<span ng-show="vm.data.values.subscribe">n additional</span> donation.</span>
+                                    <span ng-show="!!vm.data.values.donate"><small><em>Thank you!!</em></small></span>
+                                </label>
+                                <div class="input-group narrow">
+                                    <span class="input-group-addon">$</span>
+                                    <input type="text" class="form-control input-sm text-right" ng-model="vm.data.values.donation" ng-blur="vm.autosave()" ng-disabled="!vm.data.values.donate">
+                                    <span class="input-group-addon">.00</span>
+                                </div>
                             </div>
                         </form>
                     </div>
                     <div class="col-sm-6">
-                        <div class="form-group">
-                            <label class="checkbox-inline">
-                                <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day 2015 through Presidents' Day 2016</span>
-                                <span ng-show="!!vm.data.values.subscribe"><small><em>Thank you!!</em></small></span>
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label class="checkbox-inline">
-                                <input ng-model="vm.data.values.donate" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like to give a<span ng-show="vm.data.values.subscribe">n additional</span> donation.</span>
-                                <span ng-show="!!vm.data.values.donate"><small><em>Thank you!!</em></small></span>
-                            </label>
-                            <div class="input-group narrow">
-                                <span class="input-group-addon">$</span>
-                                <input type="text" class="form-control input-sm text-right" ng-model="vm.data.values.donation" ng-blur="vm.autosave()" ng-disabled="!vm.data.values.donate">
-                                <span class="input-group-addon">.00</span>
-                            </div>
-                        </div>
                         <div class="well well-sm">
                             <div class="row" ng-show="vm.data.values.subscribe">
                                 <div class="col-xs-9">
@@ -97,7 +85,7 @@
                             <input type="hidden" name="cmd" value="_donations">
                             <input type="hidden" name="business" value="troop581az@gmail.com">
                             <input type="hidden" name="lc" value="US">
-                            <input type="hidden" name="item_name" value="{{vm.getDescription()}}">
+                            <input type="hidden" name="item_name" value="{{vm.data.values.name}}, {{vm.data.values.address}} - {{vm.getDescription()}}">
                             <input type="hidden" name="amount" value="{{vm.getAmount()}}">
                             <input type="hidden" name="currency_code" value="USD">
                             <input type="hidden" name="no_note" value="0">
@@ -107,11 +95,11 @@
                             <input type="hidden" name="return" value="http://troop581.github.io/#/success">
                             <input type="hidden" name="cancel_return" value="http://troop581.github.io/#/flags">
                             <!--<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHosted">-->
-                            <input type="hidden" name="name" value="{{vm.data.values.name}}">
+                            <!--<input type="hidden" name="name" value="{{vm.data.values.name}}">
                             <input type="hidden" name="address" value="{{vm.data.values.address}}">
                             <input type="hidden" name="phone" value="{{vm.data.values.phone}}">
                             <input type="hidden" name="email" value="{{vm.data.values.email}}">
-                            <input type="hidden" name="instructions" value="{{vm.data.values.instructions}}">
+                            <input type="hidden" name="instructions" value="{{vm.data.values.instructions}}">-->
                             <button type="submit" class="btn btn-lg btn-wide btn-success img-center">Donate via PayPal</button>
                         </form>
                         <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
