--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -11,7 +11,7 @@
                         </h4>
                         <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
                         <h3>
-                            For $40, the Boy Scouts from Troop 581 will come to your home on eight holidays <span class="visible-xs-inline visible-sm-inline"><small>(see dates below)</small></span> to place a flag in your front yard.
+                            For $40, the Boy Scouts from Troop 581 will come to your home on eight holidays to place a flag in your front yard.
                             The flag will be placed at dawn and removed at dusk.
                         </h3>
                         <blockquote>
@@ -104,11 +104,6 @@
                         </form>
                         <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
                     </div>
-                </div>
-            </div>
-            <div class="row visible-xs-inline">
-                <div class="col-xs-12">
-                    <hr />
                 </div>
             </div>
             <div class="col-xs-4 col-xs-pull-8">
