--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -5,10 +5,10 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h2 class="close-top">Please help us get to Scout Camp!</h2>
-                        <h4>
-                            <button class="btn btn-sm btn-primary" ng-click="vm.showBoundaries()"><i class="fa fa-fw fa-map-marker"></i> Flag Boundaries</button>
-                            Please make sure you live in the boundaries that we cover.
-                        </h4>
+                        <h3>
+                            <a class="btn btn-sm btn-warning" href="www.troop581.us"><i class="fa fa-fw fa-pointer"></i> TROOP581.US</a>
+                            Sign up and donate online!
+                        </h3>
                         <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
                         <h3>
                             For $40, the Boy Scouts from Troop 581 will come to your home on eight holidays to place a flag in your front yard.
