--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -6,7 +6,7 @@
                     <div class="col-xs-12">
                         <h2 class="close-top">Please help us get to Scout Camp!</h2>
                         <h3>
-                            <a class="btn btn-sm btn-warning" href="www.troop581.us"><i class="fa fa-fw fa-pointer"></i> TROOP581.US</a>
+                            <a class="btn btn-sm btn-warning" href="www.troop581.us"><i class="fa fa-fw fa-hand-o-up"></i> TROOP581.US</a>
                             Sign up and donate online!
                         </h3>
                         <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
