--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -6,8 +6,7 @@
                     <div class="col-xs-12">
                         <h2 class="close-top">Please help us get to Scout Camp!</h2>
                         <h3>
-                            <a class="btn btn-lg btn-warning" href="www.troop581.us"><i class="fa fa-fw fa-hand-o-up"></i> www.Troop581.us</a>
-                            Sign up and donate online!
+                            <a class="btn btn-lg btn-warning" href="www.troop581.us"><i class="fa fa-fw fa-hand-o-up"></i> www.Troop581.us</a>&emsp;Sign up and donate online!
                         </h3>
                         <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
                         <h3>
