--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -6,7 +6,7 @@
                     <div class="col-xs-12">
                         <h2 class="close-top">Please help us get to Scout Camp!</h2>
                         <h3>
-                            <a class="btn btn-lg btn-warning" href="www.troop581.us"><i class="fa fa-fw fa-hand-o-up"></i> www.Troop581.us</a>&emsp;Sign up and donate online!
+                            <a class="btn btn-lg btn-warning" href="http://www.troop581.us"><i class="fa fa-fw fa-hand-o-up"></i> www.Troop581.us</a>&emsp;Sign up and donate online!
                         </h3>
                         <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
                         <h3>
@@ -23,13 +23,13 @@
                     <div class="col-xs-6">
                         <form>
                             <div class="form-group field-label">
-                                <label>Name *</label>
-                                <input type="text" class="form-control input-sm" ng-model="vm.data.values.name" ng-blur="vm.autosave()">
+                                <label>Name</label>
+                                <input type="text" class="form-control input" ng-model="vm.data.values.name" ng-blur="vm.autosave()">
                             </div>
                             <div class="form-group field-label">
-                                <label>Street Address<span ng-show="vm.data.values.subscribe"> *</span></label>
+                                <label>Street Address</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control input-sm" ng-model="vm.data.values.address" ng-blur="vm.autosave()">
+                                    <input type="text" class="form-control input" ng-model="vm.data.values.address" ng-blur="vm.autosave()">
                                     <span class="input-group-addon">Gilbert, AZ</span>
                                 </div>
                             </div>
@@ -46,7 +46,7 @@
                                 </label>
                                 <div class="input-group narrow">
                                     <span class="input-group-addon">$</span>
-                                    <input type="text" class="form-control input-sm text-right" ng-model="vm.data.values.donation" ng-blur="vm.autosave()" ng-disabled="!vm.data.values.donate">
+                                    <input type="text" class="form-control input-sm text-right" ng-model="vm.data.values.donation" ng-blur="vm.autosave()">
                                     <span class="input-group-addon">.00</span>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                     For more information about the flag service,
                     to speak with someone about your flag service,
                     or for more information on joining our troop,
-                    please <a href="mailto:troop581az@gmail.com">send us an email</a>.
+                    please email us at <a href="mailto:email@troop581.us">email@troop581.us</a>.
                 </h5>
             </div>
         </div>
