--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -20,7 +20,7 @@
                 </div>
                 <hr />
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-7">
                         <form>
                             <div class="form-group field-label">
                                 <label>Name</label>
@@ -52,27 +52,35 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-xs-5">
                         <div class="well well-sm text-center">
                             <div class="row">
-                                <div class="col-xs-12">
+                                <div class="col-xs-12 h3">
                                     Please make checks payable to
                                 </div>
-                                <div class="col-xs-12">
+                                <div class="col-xs-12 h3">
                                     <strong>BSA Troop 581</strong>
+                                </div>
+                                <div class="col-xs-12 h3">
+                                    or
+                                </div>
+                                <div class="col-xs-12 h3">
+                                    Sign up and Pay Online at
+                                </div>
+                                <div class="col-xs-12 h3">
+                                    www.Troop581.us
+                                </div>
+                                <div class="col-xs-12 h3">
+                                    <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
                                 </div>
                             </div>
                             <br />
-                            <br />
                             <div class="row">
-                                <div class="col-xs-12">
+                                <div class="col-xs-12 h4">
                                     <em>Thank you for your support!</em>
                                 </div>
                             </div>
                         </div>
-                        <br />
-                        <br />
-                        <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
                     </div>
                 </div>
             </div>
