--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -55,23 +55,23 @@
                     <div class="col-xs-5">
                         <div class="well well-sm text-center">
                             <div class="row">
-                                <div class="col-xs-12 h3">
+                                <div class="col-xs-12 h4">
                                     Please make checks payable to
                                 </div>
-                                <div class="col-xs-12 h3">
+                                <div class="col-xs-12 h4">
                                     <strong>BSA Troop 581</strong>
                                 </div>
-                                <div class="col-xs-12 h4">
-                                    or
+                                <div class="col-xs-12 h5">
+                                    OR
                                 </div>
-                                <div class="col-xs-12 h3">
+                                <div class="col-xs-12 h4">
                                     Sign up and Pay Online at
                                 </div>
-                                <div class="col-xs-12 h3">
+                                <div class="col-xs-12 h4">
                                     www.Troop581.us
                                 </div>
-                                <div class="col-xs-12 h3">
-                                    <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
+                                <div class="col-xs-12 h4">
+                                    <div class="text-center"><i class="fa fa-lg fa-cc-paypal"></i> <i class="fa fa-lg fa-cc-amex"></i> <i class="fa fa-lg fa-cc-discover"></i> <i class="fa fa-lg fa-cc-mastercard"></i> <i class="fa fa-lg fa-cc-visa"></i></div>
                                 </div>
                             </div>
                             <br />
