--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -71,7 +71,7 @@
                                     www.Troop581.us
                                 </div>
                                 <div class="col-xs-12 h4">
-                                    <div class="text-center"><i class="fa fa-lg fa-cc-paypal"></i> <i class="fa fa-lg fa-cc-amex"></i> <i class="fa fa-lg fa-cc-discover"></i> <i class="fa fa-lg fa-cc-mastercard"></i> <i class="fa fa-lg fa-cc-visa"></i></div>
+                                    <div class="text-center"><i class="fa fa-2x fa-cc-paypal"></i> <i class="fa fa-2x fa-cc-amex"></i> <i class="fa fa-2x fa-cc-discover"></i> <i class="fa fa-2x fa-cc-mastercard"></i> <i class="fa fa-2x fa-cc-visa"></i></div>
                                 </div>
                             </div>
                             <br />
