--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -4,15 +4,15 @@
             <div class="col-xs-8 col-xs-push-4">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h2 class="close-top">Please help us get to Scout Camp!</h2>
-                        <h3>
+                        <h3 class="close-top">Please help us get to Scout Camp!</h3>
+                        <h4>
                             <a class="btn btn-lg btn-warning" href="http://www.troop581.us"><i class="fa fa-fw fa-hand-o-up"></i> www.Troop581.us</a>&emsp;Sign up and donate online!
-                        </h3>
-                        <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
-                        <h3>
+                        </h4>
+                        <h4>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h4>
+                        <h4>
                             For $40, the Boy Scouts from Troop 581 will come to your home on eight holidays to place a flag in your front yard.
                             The flag will be placed at dawn and removed at dusk.
-                        </h3>
+                        </h4>
                         <blockquote>
                             <p>Prior to the first flag holiday, we will come to your home and find a suitable spot in your yard, near the sidewalk, to place a metal sleeve.</p>
                         </blockquote>
@@ -55,7 +55,7 @@
                     <div class="col-xs-5">
                         <div class="well well-sm text-center">
                             <div class="row">
-                                <div class="col-xs-12 h4">
+                                <div class="col-xs-12 h5">
                                     Please make checks payable to
                                 </div>
                                 <div class="col-xs-12 h4">
@@ -64,19 +64,18 @@
                                 <div class="col-xs-12 h5">
                                     OR
                                 </div>
-                                <div class="col-xs-12 h4">
+                                <div class="col-xs-12 h5">
                                     Sign up and Pay Online at
                                 </div>
                                 <div class="col-xs-12 h4">
-                                    www.Troop581.us
+                                    <strong>www.Troop581.us</strong>
                                 </div>
-                                <div class="col-xs-12 h4">
+                                <div class="col-xs-12 h5">
                                     <div class="text-center"><i class="fa fa-2x fa-cc-paypal"></i> <i class="fa fa-2x fa-cc-amex"></i> <i class="fa fa-2x fa-cc-discover"></i> <i class="fa fa-2x fa-cc-mastercard"></i> <i class="fa fa-2x fa-cc-visa"></i></div>
                                 </div>
                             </div>
-                            <br />
                             <div class="row">
-                                <div class="col-xs-12 h4">
+                                <div class="col-xs-12 h5">
                                     <em>Thank you for your support!</em>
                                 </div>
                             </div>
