--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -89,7 +89,7 @@
                     <hr />
                     <div class="holiday" ng-repeat="holiday in vm.holidays">
                         <h4 class="holiday-text">{{holiday.text}}</h4>
-                        <h4 class="holiday-date"><small>{{holiday.date | momentToString:'dddd, MMMM D, YYYY'}}</small></h4>
+                        <h4 class="holiday-date"><small>{{holiday.date | momentToString:'ddd, MMM D, YYYY'}}</small></h4>
                     </div>
                 </div>
             </div>
