--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -89,7 +89,7 @@
                     <hr />
                     <div class="holiday" ng-repeat="holiday in vm.holidays">
                         <h4 class="holiday-text">{{holiday.text}}</h4>
-                        <h4 class="holiday-date"><small>{{holiday.date | momentToString:'ddd, MMM D, YYYY'}}</small></h4>
+                        <h4 class="holiday-date"><small>{{holiday.date | momentToString:'dddd, MMMM D, YYYY'}}</small></h4>
                     </div>
                 </div>
             </div>
@@ -97,11 +97,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <hr class="footer"/>
-                <h5>
-                    For more information about the flag service,
-                    to speak with someone about your flag service,
-                    or for more information on joining our troop,
-                    please email us at <a href="mailto:email@troop581.us">email@troop581.us</a>.
+                <h5 class="text-center">
+                    For more information about the flag service or to speak with someone about your flag service, please email us at <a href="mailto:email@troop581.us">email@troop581.us</a>.
                 </h5>
             </div>
         </div>
