--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -100,7 +100,11 @@
                             <input type="hidden" name="phone" value="{{vm.data.values.phone}}">
                             <input type="hidden" name="email" value="{{vm.data.values.email}}">
                             <input type="hidden" name="instructions" value="{{vm.data.values.instructions}}">-->
-                            <button type="submit" class="btn btn-lg btn-wide btn-success img-center">Donate via PayPal</button>
+                            <button type="submit" class="btn btn-lg btn-wide btn-success img-center">
+                                <span class="h3">Donate via PayPal</span>
+                                <br />
+                                <span class="h5">You do not need a PayPal account</span>
+                            </button>
                         </form>
                         <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
                     </div>
