--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -6,7 +6,7 @@
                     <div class="col-xs-12">
                         <h3 class="close-top">Please help us get to Scout Camp!</h3>
                         <h4>
-                            <a class="btn btn-lg btn-warning" href="http://www.troop581.us"><i class="fa fa-fw fa-hand-o-up"></i> www.Troop581.us</a>&emsp;Sign up and donate online!
+                            <a class="btn btn-lg btn-warning"><i class="fa fa-fw fa-lg fa-hand-o-up"></i> www.Troop581.us</a>&emsp;Sign up and donate online!&emsp;<a class="btn btn-lg btn-primary"><i class="fa fa-lg fa-desktop"></i>&ensp;<i class="fa fa-lg fa-tablet"></i>&ensp;<i class="fa fa-lg fa-mobile"></i></a>
                         </h4>
                         <h4>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h4>
                         <h4>
@@ -14,7 +14,7 @@
                             The flag will be placed at dawn and removed at dusk.
                         </h4>
                         <blockquote>
-                            <p>Prior to the first flag holiday, we will come to your home and find a suitable spot in your yard, near the sidewalk, to place a metal sleeve.</p>
+                            <p><small>Prior to the first flag holiday, we will come to your home and find a suitable spot in your yard, near the sidewalk, to place a metal sleeve.</small></p>
                         </blockquote>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="checkbox-inline">
-                                    <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day 2015 through Presidents' Day 2016</span>
+                                    <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day 2015 through Presidents' Day 2016 &ndash; $40</span>
                                     <span ng-show="!!vm.data.values.subscribe"><small><em>Thank you!!</em></small></span>
                                 </label>
                             </div>
@@ -70,7 +70,7 @@
                                 <div class="col-xs-12 h4">
                                     <strong>www.Troop581.us</strong>
                                 </div>
-                                <div class="col-xs-12 h4">
+                                <div class="col-xs-12 h5">
                                     <div class="text-center"><i class="fa fa-2x fa-cc-paypal"></i> <i class="fa fa-2x fa-cc-amex"></i> <i class="fa fa-2x fa-cc-discover"></i> <i class="fa fa-2x fa-cc-mastercard"></i> <i class="fa fa-2x fa-cc-visa"></i></div>
                                 </div>
                             </div>
@@ -85,20 +85,13 @@
             </div>
             <div class="col-xs-4 col-xs-pull-8">
                 <div class="well well-sm holidays">
-                    <h3 class="title text-center">Flag Service Dates</h3>
-                    <hr />
                     <div class="holiday" ng-repeat="holiday in vm.holidays">
                         <h4 class="holiday-text">{{holiday.text}}</h4>
                         <h4 class="holiday-date"><small>{{holiday.date | momentToString:'dddd, MMMM D, YYYY'}}</small></h4>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <hr class="footer"/>
-                <h5 class="text-center">
-                    For more information about the flag service or to speak with someone about your flag service, please email us at <a href="mailto:email@troop581.us">email@troop581.us</a>.
+                <h5>
+                    For more information about the flag service or to speak with someone about your flag service, please email us at <strong>email@troop581.us</strong>.
                 </h5>
             </div>
         </div>
