--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -99,7 +99,7 @@
                                 <br />
                                 <span class="h5">You do not need a PayPal account</span>
                             </button>
-                            <div type="submit" class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
+                            <button type="submit" class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></button>
                         </form>
                     </div>
                 </div>
