--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -85,9 +85,9 @@
             </div>
             <div class="col-xs-4 col-xs-pull-8">
                 <div class="well well-sm holidays">
-                    <div class="holiday" ng-repeat="holiday in vm.holidays">
+                    <div class="holiday" ng-repeat="holiday in vm.data.holidays">
                         <h4 class="holiday-text">{{holiday.text}}</h4>
-                        <h4 class="holiday-date"><small>{{holiday.date | momentToString:'dddd, MMMM D, YYYY'}}</small></h4>
+                        <h4 class="holiday-date"><small>{{holiday.dateNoYear}}</small></h4>
                     </div>
                 </div>
                 <h5>
