--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=11; IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2" />
-    <title>Troop 581</title>
+    <title ng-bind="title">Troop 581</title>
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <!--<link rel="icon" type="image/png" href="favicon.ico">-->
     <link href='//fonts.googleapis.com/css?family=Open+Sans:700,300,400|Patua+One' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" rel="stylesheet">-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="content/css/ng-quick-date-plus-default-theme_smw.css" rel="stylesheet" />
     <link href="content/css/toastr.min.css" rel="stylesheet" />
@@ -23,23 +21,23 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/jquery.min.js"><\/script>')</script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
     <script>window.angular || document.write('<script src="scripts/angular.min.js"><\/script>')</script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js"></script>
     <script>try { angular.module('ngRoute'); } catch (e) { document.write('<script src="scripts/angular-route.min.js"><\/script>'); }</script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-sanitize.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-sanitize.min.js"></script>
     <script>try { angular.module('ngSanitize'); } catch (e) { document.write('<script src="scripts/angular-sanitize.min.js"><\/script>'); }</script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
     <script>window.moment || document.write('<script src="scripts/moment.min.js"><\/script>')</script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.6.1/lodash.min.js"></script>
     <script>window._ || document.write('<script src="scripts/lodash.min.js"><\/script>')</script>
     <script src="scripts/toastr.min.js"></script>
-    <script src="scripts/ui-bootstrap-tpls-0.11.0.min.js"></script>
-    <script src="scripts/ng-quick-date.min.js"></script>
+    <script src="scripts/ui-bootstrap-tpls-0.13.3.min.js"></script>
+    <!--<script src="scripts/ng-quick-date.min.js"></script>
     <script src="scripts/xlsx.core.min.js"></script>
     <script src="scripts/FileSaver.min.js"></script>
-    <script src="scripts/angular-file-upload.min.js"></script>
+    <script src="scripts/angular-file-upload.min.js"></script>-->
 
     <script src="app/scripts.js"></script>
 </body>
