--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -6,11 +6,11 @@
                     <div class="col-xs-12">
                         <h3 class="close-top">Please help us get to Scout Camp!</h3>
                         <h4>
-                            <a class="btn btn-lg btn-warning"><i class="fa fa-fw fa-lg fa-hand-o-up"></i> www.Troop581.us</a>&emsp;Sign up and donate online!&emsp;<a class="btn btn-lg btn-primary"><i class="fa fa-lg fa-desktop"></i>&ensp;<i class="fa fa-lg fa-tablet"></i>&ensp;<i class="fa fa-lg fa-mobile"></i></a>
+                            <a class="btn btn-lg btn-warning">www.Troop581.us <i class="fa fa-fw fa-mouse-pointer"></i></a>&emsp;Sign up and donate online!&emsp;<a class="btn btn-lg btn-primary"><i class="fa fa-lg fa-desktop"></i>&ensp;<i class="fa fa-lg fa-tablet"></i>&ensp;<i class="fa fa-lg fa-mobile"></i></a>
                         </h4>
                         <h4>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h4>
                         <h4>
-                            For $40, the Boy Scouts from Troop 581 will come to your home on eight holidays to place a flag in your front yard.
+                            For ${{vm.data.cost}}, the Boy Scouts from Troop 581 will come to your home on eight holidays to place a flag in your front yard.
                             The flag will be placed at dawn and removed at dusk.
                         </h4>
                         <blockquote>
@@ -35,7 +35,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="checkbox-inline">
-                                    <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day 2015 through Presidents' Day 2016 &ndash; $40</span>
+                                    <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day {{vm.data.year}} through Presidents' Day {{vm.data.year + 1}} &ndash; ${{vm.data.cost}}</span>
                                     <span ng-show="!!vm.data.values.subscribe"><small><em>Thank you!!</em></small></span>
                                 </label>
                             </div>
@@ -60,6 +60,7 @@
                                 </div>
                                 <div class="col-xs-12 h4">
                                     <strong>BSA Troop 581</strong>
+                                    <h5>Checks can be mailed to <br />632 E Desert Ln, Gilbert, AZ 85234</h5>
                                 </div>
                                 <div class="col-xs-12 h5">
                                     or
