--- a/app/modules/requirements.show.html
+++ b/app/modules/requirements.show.html
@@ -1,5 +1,5 @@
 ﻿<div class="modal-header text-center">
-    <span class="h4 modal-title">{{vm.badge.name}} {{vm.badge.type}} Requirements</span><button class="btn btn-primary pull-right hidden-xs" ng-click="vm.close()">Close</button>
+    <span class="h4 modal-title">{{vm.badge.name}}<span class="hidden-xs"> {{vm.badge.type}} Requirements</span></span><button class="btn btn-primary pull-right" ng-click="vm.close()">Close</button>
 </div>
 <div class="modal-body">
     <img ng-src="{{vm.badge.imgUrl}}" alt="{{vm.badge.name}}" class="pull-right badge-img" />
