--- a/app/modules/requirements.html
+++ b/app/modules/requirements.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="requirements as vm">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
                 <div ng-if="vm.data.processingRequirements" class="text-center text-primary">
@@ -35,7 +35,7 @@
         </div>
         <div class="row text-center">
             <div class="col-xs-12">
-                <h4>Data pulled from MeritBadge.org. Thank you!</h4>
+                <h5>Data pulled from MeritBadge.org. <em>Thank you!</em></h5>
             </div>
         </div>
     </div>
