--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -106,7 +106,7 @@
                                 <h5>
                                     Or pay by check/cash. Please make checks out to <strong>BSA&nbsp;Troop&nbsp;581</strong>.
                                     <br />
-                                    Checks can be mailed to 632&nbsp;E&nbsp;Desert&nbsp;Ln,&nbsp;Gilbert,&nbsp;AZ&nbsp;85234
+                                    Checks can be mailed to 1134&nbsp;E&nbsp;Juanita&nbsp;Ave,&nbsp;Gilbert,&nbsp;AZ&nbsp;85234
                                 </h5>
                             </div>
                         </div>
