--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -60,7 +60,7 @@
                                 </div>
                                 <div class="col-xs-12 h4">
                                     <strong>BSA Troop 581</strong>
-                                    <h5>Checks can be mailed to <br />632 E Desert Ln, Gilbert, AZ 85234</h5>
+                                    <h5>Checks can be mailed to <br />1134 E Juanita Ave, Gilbert, AZ 85234</h5>
                                 </div>
                                 <div class="col-xs-12 h5">
                                     or Sign up and Pay Online at
