feat: clean requirements and add disabled

--- a/app/modules/flags.boundaries.html
+++ b/app/modules/flags.boundaries.html
@@ -1,9 +1,10 @@
 ﻿<div class="modal-header text-center">
-    <span class="h3 modal-title">Troop 581 Flag Boundaries</span><button class="btn btn-primary pull-right hidden-xs" ng-click="vm.close()">Close</button>
+  <span class="h3 modal-title">Troop 581 Flag Boundaries</span><button class="btn btn-primary pull-right hidden-xs"
+    ng-click="vm.close()">Close</button>
 </div>
 <div class="modal-body">
-    <img src="../../content/images/boundaries.png" class="img-responsive img-rounded img-center" />
+  <img src="../../content/images/boundaries.png" class="img-responsive img-rounded img-center" />
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="vm.close()">Close</button>
+  <button class="btn btn-primary" ng-click="vm.close()">Close</button>
 </div>
