--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -1,98 +1,110 @@
 ﻿<div ng-controller="flyer as vm">
-    <div class="container">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-8 col-xs-push-4">
         <div class="row">
-            <div class="col-xs-8 col-xs-push-4">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h3 class="close-top">Please help us get to Scout Camp!</h3>
-                        <h4>
-                            <a class="btn btn-lg btn-warning">www.Troop581.us <i class="fa fa-fw fa-mouse-pointer"></i></a>&emsp;Sign up and donate online!&emsp;<a class="btn btn-lg btn-primary"><i class="fa fa-lg fa-desktop"></i>&ensp;<i class="fa fa-lg fa-tablet"></i>&ensp;<i class="fa fa-lg fa-mobile"></i></a>
-                        </h4>
-                        <h4>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h4>
-                        <h4>
-                            For ${{vm.data.cost}}, the Boy Scouts from Troop 581 will come to your home on eight holidays to place a flag in your front yard.
-                            The flag will be placed at dawn and removed at dusk.
-                        </h4>
-                        <blockquote>
-                            <p><small>Prior to the first flag holiday, we will come to your home and find a suitable spot in your yard, near the sidewalk, to place a metal sleeve.</small></p>
-                        </blockquote>
-                    </div>
-                </div>
-                <hr />
-                <div class="row">
-                    <div class="col-xs-6">
-                        <form>
-                            <div class="form-group field-label">
-                                <label>Name</label>
-                                <input type="text" class="form-control input" ng-model="vm.data.values.name" ng-blur="vm.autosave()">
-                            </div>
-                            <div class="form-group field-label">
-                                <label>Street Address</label>
-                                <div class="input-group input-group-sm">
-                                    <input type="text" class="form-control input" ng-model="vm.data.values.address" ng-blur="vm.autosave()">
-                                    <span class="input-group-addon">Gilbert, AZ</span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="checkbox-inline">
-                                    <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day {{vm.data.year}} through Presidents' Day {{vm.data.year + 1}} &ndash; ${{vm.data.cost}}</span>
-                                    <span ng-show="!!vm.data.values.subscribe"><small><em>Thank you!!</em></small></span>
-                                </label>
-                            </div>
-                            <div class="form-group">
-                                <label class="checkbox-inline">
-                                    <input ng-model="vm.data.values.donate" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like to give a<span ng-show="vm.data.values.subscribe">n additional</span> donation.</span>
-                                    <span ng-show="!!vm.data.values.donate"><small><em>Thank you!!</em></small></span>
-                                </label>
-                                <div class="input-group narrow">
-                                    <span class="input-group-addon">$</span>
-                                    <input type="text" class="form-control input-sm text-right" ng-model="vm.data.values.donation" ng-blur="vm.autosave()">
-                                    <span class="input-group-addon">.00</span>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="well well-sm text-center">
-                            <div class="row">
-                                <div class="col-xs-12 h5">
-                                    Please make checks payable to
-                                </div>
-                                <div class="col-xs-12 h4">
-                                    <strong>BSA Troop 581</strong>
-                                    <h5>Checks can be mailed to <br />1134 E Juanita Ave, Gilbert, AZ 85234</h5>
-                                </div>
-                                <div class="col-xs-12 h5">
-                                    or Sign up and Pay Online at
-                                </div>
-                                <div class="col-xs-12 h4">
-                                    <strong>www.Troop581.us</strong>
-                                </div>
-                                <div class="col-xs-12 h5">
-                                    <div class="text-center"><i class="fa fa-2x fa-cc-paypal"></i> <i class="fa fa-2x fa-cc-amex"></i> <i class="fa fa-2x fa-cc-discover"></i> <i class="fa fa-2x fa-cc-mastercard"></i> <i class="fa fa-2x fa-cc-visa"></i></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12 h5">
-                                    <em>Thank you for your support!</em>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-4 col-xs-pull-8">
-                <div class="well well-sm holidays">
-                    <div class="holiday" ng-repeat="holiday in vm.data.holidays">
-                        <h4 class="holiday-text">{{holiday.text}}</h4>
-                        <h4 class="holiday-date" ng-hide="vm.hideSpecificDates"><small>{{holiday.date | momentToString:'dddd, MMMM D, YYYY'}}</small></h4>
-                        <h4 class="holiday-date" ng-hide="!vm.hideSpecificDates"><small>{{holiday.dateNoYear}}</small></h4>
-                    </div>
-                </div>
-                <h5>
-                    For more information about the flag service or to speak with someone about your flag service, please email us at <strong>email@troop581.us</strong>.
-                </h5>
-            </div>
+          <div class="col-xs-12">
+            <h3 class="close-top">Please help us get to Scout Camp!</h3>
+            <h4>
+              <a class="btn btn-lg btn-warning">www.Troop581.us <i class="fa fa-fw fa-mouse-pointer"></i></a>&emsp;Sign
+              up and donate online!&emsp;<a class="btn btn-lg btn-primary"><i class="fa fa-lg fa-desktop"></i>&ensp;<i
+                  class="fa fa-lg fa-tablet"></i>&ensp;<i class="fa fa-lg fa-mobile"></i></a>
+            </h4>
+            <h4>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer
+              camp.</h4>
+            <h4>
+              For ${{vm.data.cost}}, the Boy Scouts from Troop 581 will come to your home on eight holidays to place a
+              flag in your front yard.
+              The flag will be placed at dawn and removed at dusk.
+            </h4>
+            <blockquote>
+              <p><small>Prior to the first flag holiday, we will come to your home and find a suitable spot in your
+                  yard, near the sidewalk, to place a metal sleeve.</small></p>
+            </blockquote>
+          </div>
         </div>
+        <hr />
+        <div class="row">
+          <div class="col-xs-6">
+            <form>
+              <div class="form-group field-label">
+                <label>Name</label>
+                <input type="text" class="form-control input" ng-model="vm.data.values.name" ng-blur="vm.autosave()">
+              </div>
+              <div class="form-group field-label">
+                <label>Street Address</label>
+                <div class="input-group input-group-sm">
+                  <input type="text" class="form-control input" ng-model="vm.data.values.address" ng-blur="vm.autosave()">
+                  <span class="input-group-addon">Gilbert, AZ</span>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="checkbox-inline">
+                  <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I
+                    would like a flag subscription for Memorial Day {{vm.data.year}} through Presidents' Day
+                    {{vm.data.year + 1}} &ndash; ${{vm.data.cost}}</span>
+                  <span ng-show="!!vm.data.values.subscribe"><small><em>Thank you!!</em></small></span>
+                </label>
+              </div>
+              <div class="form-group">
+                <label class="checkbox-inline">
+                  <input ng-model="vm.data.values.donate" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I
+                    would like to give a<span ng-show="vm.data.values.subscribe">n additional</span> donation.</span>
+                  <span ng-show="!!vm.data.values.donate"><small><em>Thank you!!</em></small></span>
+                </label>
+                <div class="input-group narrow">
+                  <span class="input-group-addon">$</span>
+                  <input type="text" class="form-control input-sm text-right" ng-model="vm.data.values.donation"
+                    ng-blur="vm.autosave()">
+                  <span class="input-group-addon">.00</span>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="col-xs-6">
+            <div class="well well-sm text-center">
+              <div class="row">
+                <div class="col-xs-12 h5">
+                  Please make checks payable to
+                </div>
+                <div class="col-xs-12 h4">
+                  <strong>BSA Troop 581</strong>
+                  <h5>Checks can be mailed to <br />1134 E Juanita Ave, Gilbert, AZ 85234</h5>
+                </div>
+                <div class="col-xs-12 h5">
+                  or Sign up and Pay Online at
+                </div>
+                <div class="col-xs-12 h4">
+                  <strong>www.Troop581.us</strong>
+                </div>
+                <div class="col-xs-12 h5">
+                  <div class="text-center"><i class="fa fa-2x fa-cc-paypal"></i> <i class="fa fa-2x fa-cc-amex"></i> <i
+                      class="fa fa-2x fa-cc-discover"></i> <i class="fa fa-2x fa-cc-mastercard"></i> <i class="fa fa-2x fa-cc-visa"></i></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 h5">
+                  <em>Thank you for your support!</em>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-4 col-xs-pull-8">
+        <div class="well well-sm holidays">
+          <div class="holiday" ng-repeat="holiday in vm.data.holidays">
+            <h4 class="holiday-text">{{holiday.text}}</h4>
+            <h4 class="holiday-date" ng-hide="vm.hideSpecificDates"><small>{{holiday.date | momentToString:'dddd, MMMM
+                D, YYYY'}}</small></h4>
+            <h4 class="holiday-date" ng-hide="!vm.hideSpecificDates"><small>{{holiday.dateNoYear}}</small></h4>
+          </div>
+        </div>
+        <h5>
+          For more information about the flag service or to speak with someone about your flag service, please email us
+          at <strong>email@troop581.us</strong>.
+        </h5>
+      </div>
     </div>
+  </div>
 </div>
