fix: update disabled verbiage

--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -28,8 +28,8 @@
             <div class="col-sm-12">
               <div class="alert alert-danger">
                 <div>We are no longer accepting flag subscriptions for this year (Memorial Day {{vm.data.year}} to
-                  Presidents' Day {{vm.data.year + 1}}). Please check back at a later time, and please be sure your
-                  address is within our flag boundaries. Thank you for your continued support!</div>
+                  Presidents' Day {{vm.data.year + 1}}). Please check back at a later date, and please be sure your
+                  address is within our flag boundaries (use the blue button above). Thank you for your continued support!</div>
                 <div><em>&mdash; Troop 581</em></div>
               </div>
             </div>
