--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -1,6 +1,13 @@
 ﻿<div ng-controller="flags as vm">
-  <div class="container">
-    <div class="row">
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Thank you for your past support!</h1>
+			<p>
+				Thank you for supporting Troop&nbsp;581 in the past. There have been a lot of recent changes, and the troop is now discontinued, 
+				so we will no longer be providing our flag service. Thank you for the years of support!
+			</p>
+		</div>
+		<!-- <div class="row">
       <div class="col-md-8 col-md-push-4">
         <div class="row">
           <div class="col-sm-12">
@@ -162,6 +169,6 @@
           please <a href="mailto:email@troop581.us">send us an email</a>.
         </h5>
       </div>
-    </div>
-  </div>
+    </div> -->
+	</div>
 </div>
