--- a/index.html
+++ b/index.html
@@ -1,39 +1,28 @@
 ﻿<!DOCTYPE html>
-<html lang="en" id="ng-app" ng-app="app">
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=11; IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2" />
-    <title ng-bind="title">Troop 581</title>
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:700,300,400|Patua+One' rel='stylesheet' type='text/css'>
-    <link href="content/css/bootstrap.min.css" rel="stylesheet">
-    <link href="content/css/font-awesome.min.css" rel="stylesheet">
-    <link href="content/css/toastr.min.css" rel="stylesheet" />
-    <link href="app/styles.min.css" rel="stylesheet" />
+    <title>Troop 581</title>
+    <link href="bootstrap.min.css" rel="stylesheet">
 </head>
-<body ng-cloak>
 
-    <div ng-include="'app/layout/shell.html'"></div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="scripts/jquery.min.js"><\/script>')</script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
-    <script>window.angular || document.write('<script src="scripts/angular.min.js"><\/script>')</script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js"></script>
-    <script>try { angular.module('ngRoute'); } catch (e) { document.write('<script src="scripts/angular-route.min.js"><\/script>'); }</script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-sanitize.min.js"></script>
-    <script>try { angular.module('ngSanitize'); } catch (e) { document.write('<script src="scripts/angular-sanitize.min.js"><\/script>'); }</script>
-    <script src="scripts/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
-    <script>window.moment || document.write('<script src="scripts/moment.min.js"><\/script>')</script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.6.1/lodash.min.js"></script>
-    <script>window._ || document.write('<script src="scripts/lodash.min.js"><\/script>')</script>
-    <script src="scripts/toastr.min.js"></script>
-    <script src="scripts/ui-bootstrap-tpls-0.13.3.min.js"></script>
-
-    <script src="app/scripts.js"></script>
+<body>
+    <div class="container">
+        <div class="row">
+            <br>
+        </div>
+        <div class="row">
+            <div class="jumbotron">
+                <h1>Thank you for your past support!</h1>
+                <p>
+                    Thank you for supporting Troop&nbsp;581 in the past. There have been a lot of recent changes, and
+                    the troop is
+                    now discontinued,
+                    so we will no longer be providing our flag service. Thank you for the years of support!
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
